--- a/Server/BachelorproefBlazorScanner.Server.csproj
+++ b/Server/BachelorproefBlazorScanner.Server.csproj
@@ -15,5 +15,9 @@
     <ProjectReference Include="..\Shared\BachelorproefBlazorScanner.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 
 </Project>
