--- a/BachelorproefBlazorScanner.Persistence/BachelorproefBlazorScanner.Persistence.csproj
+++ b/BachelorproefBlazorScanner.Persistence/BachelorproefBlazorScanner.Persistence.csproj
@@ -2,15 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <SupportedPlatform Include="browser" />
+    <Folder Include="Configurations\Scans\" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="Scans\" />
-  </ItemGroup>
 </Project>
