--- a/Server/BachelorproefBlazorScanner.Server.csproj
+++ b/Server/BachelorproefBlazorScanner.Server.csproj
@@ -8,15 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.17" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BachelorproefBlazorScanner.Services\BachelorproefBlazorScanner.Services.csproj" />
     <ProjectReference Include="..\Client\BachelorproefBlazorScanner.Client.csproj" />
     <ProjectReference Include="..\Shared\BachelorproefBlazorScanner.Shared.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\Scans\" />
   </ItemGroup>
 
 
