Make scanner responsive

--- a/Client/BachelorproefBlazorScanner.Client.csproj
+++ b/Client/BachelorproefBlazorScanner.Client.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BachelorproefBlazorScanner.Services\BachelorproefBlazorScanner.Services.csproj" />
     <ProjectReference Include="..\Shared\BachelorproefBlazorScanner.Shared.csproj" />
   </ItemGroup>
 
