--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlServer": "Server=mysqlserverblazor;TrustServerCertificate=True;Database=BachelorproefBlazorScanner;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
