--- a/Server/appsettings.Development.json
+++ b/Server/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlServer": "Server=mysqlserverblazor;TrustServerCertificate=True;Database=BachelorproefBlazorScanner;Trusted_Connection=True;"
+    "SqlServer": "Server=mysqlserverblazor.database.windows.net;TrustServerCertificate=True;Database=BachelorproefBlazorScanner;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
