--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlServer": "Server=mysqlserverblazor.database.windows.net;TrustServerCertificate=True;Database=BachelorproefBlazorScanner;Trusted_Connection=True;"
+    "SqlServer": "Server=tcp:mysqlserverblazorscanner.database.windows.net,1433;Initial Catalog=BachelorproefBlazorScanner;Persist Security Info=False;User ID=brianluo123;Password=sqlDB99*;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +8,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*l"
 }
