--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -8,9 +8,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Values": {
-    "AzureWebJobsStorage": "",
-    "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated"
-  }
+  "AllowedHosts": "*"
 }
